saving for safe

--- a/app.json
+++ b/app.json
@@ -13,11 +13,11 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.nheyland.livetime",
+      "buildNumber": "1.0.0"
     },
     "android": {
       "adaptiveIcon": {
